Raxan Changelog
-------------------------


Release Candidate 1 (The Remix)
--------------------------------------

Design changes:
* Add $selector parameter to RaxanElement->delegate()
* Rename RaxanElement::htmlMarkup to RaxanElement::outerHtml()
* Refactor RaxanDataSanitizer class
* Replace the Switchboard and _switchboard() event handler with PageView handlers. See PageView pattern in documentation
* Rename RaxanWebPage->bindInlineEvents() to RaxanWebPage->initInlineEvents()
* Change Raxan::data() signature to maintain consistency with RaxanWebPage::data()
* Add new Raxan::dataBank() method

Main changes in Raxan JavaScript libraries:
* Move JavaScript files from raxan/plugins to raxan/ui/javascripts.
* merge tabstrip.js and cursor.js into raxan-ui.js
* Remove Code-behind script loading feature
* Rename Raxan.bindRemote to Raxan.iBindRemote
* Rename Raxan.triggerRemote to Raxan.iTriggerRemote
* Rename Raxan.triggerEvent to Raxan.iTriggerEvent
* Rename Raxan.flashEffect to Raxan.iFlashEffect
* Rename JavaScript Raxan.pluginpath to Raxan.scriptpath

Main changes in Raxan CSS framework:
* Move stylesheets from raxan/styles to raxan/ui/css.
* Refactor CSS so that it's easier to create themes.
* The master.css file contains structural classes. Remove master.layout.css
* Move all themeable colors, borders and fonts styles to theme.css. This file now contains theme-able classes for colors, borders , etc
* Merge master-ui.css stylesheet into theme.css.
* Add jQuery UI icons, Resizable and Selectable classes to theme.css
* Modify default theme. Move theme images to images folder
* Remove .shadow and .toolbar classes.
* Remove ".notice" css class. Use ".rax-box .error" class instead
* Remove ".fancy" and ".panel" classes
* Rename ".box" css class to ".rax-box"
* Rename ".tabstrip" css class to ".rax-tabstrip"
* The ".alert", ".error" and ".success" classes are now subset classes of the ".rax-box" class
* Add new ".rax-table" CSS class

Other changes: