@@ -78,8 +78,12 @@ class RaxanPDO extends PDO {
             $ds->execute($param);
         }
 
+        $this->_lastRowsAffected = 0;
         if ($ds===false) return false;
-        else return $ds->fetchAll(PDO::FETCH_ASSOC);
+        else {
+            $this->_lastRowsAffected = $ds->rowCount();
+            return $ds->fetchAll(PDO::FETCH_ASSOC);
+        }
     }
 
     /**
@@ -107,7 +111,7 @@ class RaxanPDO extends PDO {
             }
         }
         $ds->execute();
-
+        $this->_lastRowsAffected = $ds->rowCount();
         $rt = new RaxanPDOProcResult($ds, $params, $return);
         return $rt;
         
@@ -140,8 +144,12 @@ class RaxanPDO extends PDO {
             $ds->execute($filterValues);
         }
 
+        $this->_lastRowsAffected = 0;
         if ($ds===false) return false;
-        else return $ds->fetchAll(PDO::FETCH_ASSOC);
+        else {
+            $this->_lastRowsAffected = $ds->rowCount();
+            return $ds->fetchAll(PDO::FETCH_ASSOC);
+        }
     }
 
     /**
